cmake_minimum_required(VERSION 3.6)
project(Project2_4730)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        proj2_raytracer/src/include/GL/freeglut.h
        proj2_raytracer/src/include/GL/freeglut_ext.h
        proj2_raytracer/src/include/GL/freeglut_std.h
        proj2_raytracer/src/include/GL/glui.h
        proj2_raytracer/src/include/GL/glut.h
        proj2_raytracer/src/librt/include/Camera.h
        proj2_raytracer/src/librt/include/defs.h
        proj2_raytracer/src/librt/include/Intersection.h
        proj2_raytracer/src/librt/include/Light.h
        proj2_raytracer/src/librt/include/LinearSolver.h
        proj2_raytracer/src/librt/include/Lists.h
        proj2_raytracer/src/librt/include/Ray.h
        proj2_raytracer/src/librt/include/RayTracer.h
        proj2_raytracer/src/librt/include/RGBR_f.h
        proj2_raytracer/src/librt/include/Scene.h
        proj2_raytracer/src/librt/include/Shader.h
        proj2_raytracer/src/librt/include/Sphere.h
        proj2_raytracer/src/librt/include/Surface.h
        proj2_raytracer/src/librt/include/Triangle.h
        proj2_raytracer/src/librt/include/utilities.h
        proj2_raytracer/src/librt/Camera.cpp
        proj2_raytracer/src/librt/Intersection.cpp
        proj2_raytracer/src/librt/Light.cpp
        proj2_raytracer/src/librt/LinearSolver.cpp
        proj2_raytracer/src/librt/Ray.cpp
        proj2_raytracer/src/librt/RayTracer.cpp
        proj2_raytracer/src/librt/RGBR_f.cpp
        proj2_raytracer/src/librt/Scene.cpp
        proj2_raytracer/src/librt/Shader.cpp
        proj2_raytracer/src/librt/Sphere.cpp
        proj2_raytracer/src/librt/Surface.cpp
        proj2_raytracer/src/librt/Triangle.cpp
        proj2_raytracer/src/librt/utilities.cpp
        proj2_raytracer/src/libst/ext/freetype/include/freetype/config/ftconfig.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/config/ftheader.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/config/ftmodule.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/config/ftoption.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/config/ftstdlib.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svbdf.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svgldict.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svgxval.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svkern.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svmm.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svotval.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svpfr.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svpostnm.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svpscmap.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svpsinfo.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svsfnt.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svttcmap.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svtteng.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svwinfnt.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/services/svxf86nm.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/autohint.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftcalc.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftdebug.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftdriver.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftgloadr.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftmemory.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftobjs.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftrfork.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftserv.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftstream.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/fttrace.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/ftvalid.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/internal.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/pcftypes.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/psaux.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/pshints.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/sfnt.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/t1types.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/internal/tttypes.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/freetype.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftbbox.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftbdf.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftbitmap.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftcache.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftchapters.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/fterrdef.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/fterrors.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftgasp.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftglyph.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftgxval.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftgzip.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftimage.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftincrem.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftlcdfil.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftlist.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftlzw.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftmac.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftmm.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftmodapi.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftmoderr.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftotval.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftoutln.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftpfr.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftrender.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftsizes.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftsnames.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftstroke.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftsynth.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftsystem.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/fttrigon.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/fttypes.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftwinfnt.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ftxf86.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/t1tables.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ttnameid.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/tttables.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/tttags.h
        proj2_raytracer/src/libst/ext/freetype/include/freetype/ttunpat.h
        proj2_raytracer/src/libst/ext/freetype/include/ft2build.h
        proj2_raytracer/src/libst/ext/glew/include/GL/glew.h
        proj2_raytracer/src/libst/ext/glew/include/GL/glxew.h
        proj2_raytracer/src/libst/ext/glew/include/GL/wglew.h
        proj2_raytracer/src/libst/ext/libjpeg/include/jconfig.h
        proj2_raytracer/src/libst/ext/libjpeg/include/jerror.h
        proj2_raytracer/src/libst/ext/libjpeg/include/jmorecfg.h
        proj2_raytracer/src/libst/ext/libjpeg/include/jpeglib.h
        proj2_raytracer/src/libst/ext/libpng/include/libpng13/png.h
        proj2_raytracer/src/libst/ext/libpng/include/libpng13/pngconf.h
        proj2_raytracer/src/libst/ext/libpng/include/png.h
        proj2_raytracer/src/libst/ext/libpng/include/pngconf.h
        proj2_raytracer/src/libst/ext/zlib/include/zconf.h
        proj2_raytracer/src/libst/ext/zlib/include/zlib.h
        proj2_raytracer/src/libst/ext/zlib/include/zutil.h
        proj2_raytracer/src/libst/include/st.h
        proj2_raytracer/src/libst/include/STColor3f.h
        proj2_raytracer/src/libst/include/STColor4f.h
        proj2_raytracer/src/libst/include/STColor4ub.h
        proj2_raytracer/src/libst/include/STFont.h
        proj2_raytracer/src/libst/include/stForward.h
        proj2_raytracer/src/libst/include/stgl.h
        proj2_raytracer/src/libst/include/stglut.h
        proj2_raytracer/src/libst/include/STImage.h
        proj2_raytracer/src/libst/include/STJoystick.h
        proj2_raytracer/src/libst/include/STMatrix4.h
        proj2_raytracer/src/libst/include/STPoint2.h
        proj2_raytracer/src/libst/include/STPoint3.h
        proj2_raytracer/src/libst/include/STShaderProgram.h
        proj2_raytracer/src/libst/include/STShape.h
        proj2_raytracer/src/libst/include/STTexture.h
        proj2_raytracer/src/libst/include/STTimer.h
        proj2_raytracer/src/libst/include/STTriangleMesh.h
        proj2_raytracer/src/libst/include/STUtil.h
        proj2_raytracer/src/libst/include/STVector2.h
        proj2_raytracer/src/libst/include/STVector3.h
        proj2_raytracer/src/libst/include/tiny_obj_loader.h
        proj2_raytracer/src/libst/STColor3f.cpp
        proj2_raytracer/src/libst/STColor4f.cpp
        proj2_raytracer/src/libst/STColor4ub.cpp
        proj2_raytracer/src/libst/STFont.cpp
        proj2_raytracer/src/libst/STImage.cpp
        proj2_raytracer/src/libst/STImage_jpeg.cpp
        proj2_raytracer/src/libst/STImage_png.cpp
        proj2_raytracer/src/libst/STImage_ppm.cpp
        proj2_raytracer/src/libst/STJoystick.cpp
        proj2_raytracer/src/libst/STJoystick_darwin.cpp
        proj2_raytracer/src/libst/STJoystick_linux.cpp
        proj2_raytracer/src/libst/STJoystick_win32.cpp
        proj2_raytracer/src/libst/STMatrix4.cpp
        proj2_raytracer/src/libst/STPoint2.cpp
        proj2_raytracer/src/libst/STPoint3.cpp
        proj2_raytracer/src/libst/STShaderProgram.cpp
        proj2_raytracer/src/libst/STShape.cpp
        proj2_raytracer/src/libst/STTexture.cpp
        proj2_raytracer/src/libst/STTimer.cpp
        proj2_raytracer/src/libst/STTriangleMesh.cpp
        proj2_raytracer/src/libst/STVector2.cpp
        proj2_raytracer/src/libst/STVector3.cpp
        proj2_raytracer/src/libst/tiny_obj_loader.cpp
        proj2_raytracer/src/mainsrc/mainsrc_proj2.cpp
        proj2_raytracer/src/mainsrc/stglew.h)

add_executable(Project2_4730 ${SOURCE_FILES})